Enable rtl8812au
RTL8812AU drivers from aircrack's 5.2.20 branch require floating point support.
This commit
- enables the driver,
- builds for 32bit with "-mfloat-abi=softfp",
- builds for 64bit with the default hardware floating-point instructions and
  hardware floating-point linkage, and
- disables "-mgeneral-regs-only" for 64bit to support floating point

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -49,7 +49,9 @@ $(warning Detected assembler with broken .inst; disassembly will be unreliable)
   endif
 endif
 
-KBUILD_CFLAGS	+= -mgeneral-regs-only $(lseinstr) $(brokengasinst)
+##KBUILD_CFLAGS	+= -mgeneral-regs-only $(lseinstr) $(brokengasinst)
+## rtl8812au driver needs floating point support which -mgeneral-regs-only will not give us, so we'll get rid of it for now
+KBUILD_CFLAGS	+= $(lseinstr) $(brokengasinst)
 KBUILD_CFLAGS	+= -fno-asynchronous-unwind-tables
 KBUILD_CFLAGS	+= $(call cc-option, -mpc-relative-literal-loads)
 KBUILD_AFLAGS	+= $(lseinstr) $(brokengasinst)
