--- a/arch/arm64/configs/re4son_pi8_defconfig
+++ b/arch/arm64/configs/re4son_pi8_defconfig
@@ -59,7 +59,7 @@ CONFIG_WCN36XX_DEBUGFS=y
 CONFIG_RT2X00_DEBUG=y
 #Realtek
 CONFIG_RTL8XXXU=m
-CONFIG_RTL8812AU=m
+##CONFIG_RTL8812AU=m
 ##CONFIG_RTL8814AU=m
 CONFIG_RTL8188EU=m
 #IEEE 802.15.4
